--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -82,3 +82,55 @@ a{
     text-decoration: none;
     cursor: pointer;
   }
+  nav{
+    margin-left: 25px;
+  }
+  ul{
+    border-radius: 5px;
+    padding: 20px;
+  }
+  li{
+    margin-left: 25px;
+  }
+  nav {
+    margin: 50px;
+  }
+   
+  ul {
+    overflow: auto;
+    list-style-type: none;
+  }
+   
+  .li {
+    height: 25px;
+    float: left;
+    margin-right: 0px;
+    border-right: 1px solid #aaa;
+    padding: 0 20px;
+  }
+   
+  .li:last-child {
+    border-right: none;
+  }
+   
+  .li a {
+    text-decoration: none;
+    color: #ccc;
+    font: 25px/1 Helvetica, Verdana, sans-serif;
+    text-transform: uppercase;
+   
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+   
+  .li a:hover {
+    color: #666;
+  }
+   
+  .li.active a {
+    font-weight: bold;
+    color: #333;
+  }
