politician can create a petition against a concluded political office election [delivers 163663244]

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -4,6 +4,9 @@
     font-family: roboto-thin;
     font-size: 36px;
 }
+.title-petition{
+  margin-top:20px; 
+}
 .page-detail{
     margin-top:20px; 
     padding:0.35em 20px;
