--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -1,17 +1,13 @@
-@font-face {
-    font-family: 'roboto';
-    src: url('../font/Roboto-Regular.ttf')  format('truetype')
-        }
-@font-face {
-  font-family: 'roboto-thin';
-  src: url('../font/Roboto-Thin.ttf')  format('truetype')
-      }
-
 * {
     margin:0;
     padding:0;
-    font-family: roboto;
-    box-sizing:border-box; }
+    box-sizing:border-box;
+    font-family: "montserrat",'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.content {
+  padding: 0 20px;
+}
 .row {
     display: flex;
     flex-wrap: wrap;
