--- a/UI/css/nav.css
+++ b/UI/css/nav.css
@@ -72,6 +72,26 @@
     z-index: -11111;
 }
 
+/*button styling*/
+button,.btn{
+    display:inline-block;
+    padding:0.35em 1.2em;
+    border:0.1em solid black;
+    margin-top:10px; 
+    border-radius:0.12em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-weight:300;
+    color:black;
+    text-align:center;
+    transition: all 0.2s;
+}
+
+button:hover,a:hover{
+    color:#FFFFFF;
+    background-color:black;
+}
+
 /*media screen*/
 
 @media screen and (max-width:800px) {
